erDiagram
    Task ||--o{ SubTask : "contains"
    User ||--o{ SubTask : "creates"
    User ||--o{ SubTask : "assigned to"
    
    Task {
        ObjectId _id
        ObjectId createdById
        ObjectId ownerUserId
        String taskType
        Array assignedUserIds
        ObjectId groupId
        String title
        String description
        Number totalSubtasks
        Number completedSubtasks
        String status
        DateTime startTime
        DateTime completedTime
        Boolean isDeleted
    }
    
    SubTask {
        ObjectId _id
        ObjectId taskId
        ObjectId createdById
        ObjectId assignedToUserId
        String title
        Boolean isCompleted
        DateTime completedAt
        Number order
        Boolean isDeleted
        DateTime createdAt
        DateTime updatedAt
    }
    
    User {
        ObjectId _id
        String name
        String email
        String role
        ObjectId accountCreatorId
        String subscriptionType
    }
    
    TaskProgress {
        ObjectId _id
        ObjectId taskId
        ObjectId userId
        Array completedSubtaskIndexes
        Number progressPercentage
        String status
    }
